Добавляет новый ga

--- a/javascript.html
+++ b/javascript.html
@@ -23,6 +23,15 @@
         padding: 10px 10px;
       }
     </style>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29640059-7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-29640059-7');
+    </script>
   </head>
   <body>
 
