Исправляет ссылку на блок
(cherry picked from commit 864d391325a136d24fece46a1ddb86b4edadcd17)

--- a/html-css.html
+++ b/html-css.html
@@ -545,7 +545,7 @@ body {
 
         <article class="chapter-part">
           <div class="chapter-part-col">
-            <h3 id="#css-visually-hidden">Доступное скрытие</h3>
+            <h3 id="css-visually-hidden">Доступное скрытие</h3>
             <p>
               Для того, чтобы контент был скрыт от глаз, но доступен для скринридеров и поисковиков его нужно скрывать используя утилитарный класс <code>visually-hidden</code>.
             </p>
