Изменяет адрес ссылки с котиком

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <header>
-      <a href="https://htmlacademy.ru" target="_blank">
+      <a href="index.html">
         <img class="logo" src="img/bane.svg" width="300" height="300" alt="HTML Academy" title="HTML Academy">
       </a>
       <h1>Стиль кода Академии HTML</h1>
