--- a/javascript.html
+++ b/javascript.html
@@ -33,7 +33,7 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MN2NPQ9" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <header>
-      <a href="https://htmlacademy.ru" target="_blank">
+      <a href="index.html">
         <img class="logo" src="img/bane.svg" width="300" height="300" alt="HTML Academy" title="HTML Academy">
       </a>
       <h1><a href="index.html">Стиль кода Академии HTML</a></h1>
